[gd_scene load_steps=23 format=3 uid="uid://dha4afjf0xt7t"]

[ext_resource type="Script" uid="uid://bxkykctmdyl8l" path="res://scenes/characters/battle_enemies/woods_guy_fight/bird_bullet.gd" id="1_y02p6"]
[ext_resource type="Texture2D" uid="uid://kpxort4yhw7v" path="res://sprites/characters/overworld/spr_birds.png" id="2_fnjvn"]
[ext_resource type="Texture2D" uid="uid://btvgtu24mmlud" path="res://sprites/vfx/feather.png" id="3_y02p6"]
[ext_resource type="AudioStream" uid="uid://bgpi8xbpgxsdn" path="res://sounds/bump.ogg" id="4_y02p6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y02p6"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_fnjvn"]
_data = [Vector2(0, 0.290473), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_fnjvn"]
colors = PackedColorArray(1, 1, 1, 0.933333, 1, 0.572097, 0.775138, 0.627451)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke3ye"]
atlas = ExtResource("2_fnjvn")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tra1h"]
atlas = ExtResource("2_fnjvn")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jup1v"]
atlas = ExtResource("2_fnjvn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4cew"]
atlas = ExtResource("2_fnjvn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0ycv"]
atlas = ExtResource("2_fnjvn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owubg"]
atlas = ExtResource("2_fnjvn")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0i47"]
atlas = ExtResource("2_fnjvn")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxq8o"]
atlas = ExtResource("2_fnjvn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntaoa"]
atlas = ExtResource("2_fnjvn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7w216"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke3ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tra1h")
}],
"loop": true,
"name": &"fly",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jup1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4cew")
}],
"loop": true,
"name": &"peck",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0ycv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0i47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0ycv")
}],
"loop": true,
"name": &"skitter",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntaoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}],
"loop": true,
"name": &"stand",
"speed": 2.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fnjvn"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_24jyq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.113794, 1), 0.0, 0.0, 0, 0, Vector2(0.628617, 1), 0.0, 0.0, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_6ybi2"]
curve = SubResource("Curve_24jyq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ctd8h"]
particle_flag_disable_z = true
angle_min = -114.3
angle_max = 205.7
direction = Vector3(0, 1, 0)
spread = 60.0
initial_velocity_min = 10.0
initial_velocity_max = 30.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
radial_velocity_min = 10.0
radial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_6ybi2")

[sub_resource type="CircleShape2D" id="CircleShape2D_2v3to"]
radius = 3.0

[node name="RoseBullet" type="Area2D"]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("1_y02p6")

[node name="Line" type="Line2D" parent="."]
material = SubResource("CanvasItemMaterial_y02p6")
points = PackedVector2Array(0, 0, 0, -101)
width_curve = SubResource("Curve_fnjvn")
default_color = Color(1, 0, 0.282353, 1)
gradient = SubResource("Gradient_fnjvn")

[node name="ScnVfxBirdFlight" type="Node2D" parent="."]
position = Vector2(0, 4)

[node name="Sprite" type="AnimatedSprite2D" parent="ScnVfxBirdFlight"]
position = Vector2(-8, -15)
sprite_frames = SubResource("SpriteFrames_7w216")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.690738
centered = false

[node name="Sprite" type="AnimatedSprite2D" parent="ScnVfxBirdFlight/Sprite"]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_fnjvn")
position = Vector2(-3, -3)
scale = Vector2(1.375, 1.375)
sprite_frames = SubResource("SpriteFrames_7w216")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.690738
centered = false

[node name="GPUParticles2D" type="GPUParticles2D" parent="ScnVfxBirdFlight"]
texture = ExtResource("3_y02p6")
process_material = SubResource("ParticleProcessMaterial_ctd8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2v3to")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.6, 0.6)

[node name="WarningAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y02p6")
volume_db = -7.0
pitch_scale = 9.46

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="queue_free"]
